--- a/package.json
+++ b/package.json
@@ -3,13 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ag-grid-community/react": "^27.0.1",
+    "@ag-grid-enterprise/column-tool-panel": "^27.0.0",
+    "@ag-grid-enterprise/menu": "^27.0.0",
+    "@ag-grid-enterprise/server-side-row-model": "^27.0.0",
+    "@reduxjs/toolkit": "^1.7.2",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "ag-grid-community": "^27.0.1",
+    "ag-grid-react": "^27.0.1",
+    "bootstrap": "^5.1.3",
+    "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4"
+    "reactstrap": "^9.0.1",
+    "sweetalert": "^2.1.2",
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
