--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ag-grid-community/client-side-row-model": "^27.0.0",
     "@ag-grid-community/react": "^27.0.1",
     "@ag-grid-enterprise/column-tool-panel": "^27.0.0",
     "@ag-grid-enterprise/menu": "^27.0.0",
     "@ag-grid-enterprise/server-side-row-model": "^27.0.0",
+    "@ag-grid-enterprise/set-filter": "^27.0.0",
     "@reduxjs/toolkit": "^1.7.2",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
