--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
+    "react-select": "^5.2.2",
     "reactstrap": "^9.0.1",
     "sweetalert": "^2.1.2",
     "web-vitals": "^2.1.4",
